--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "babel-plugin-styled-components": "^1.11.0",
         "gatsby": "^2.23.12",
         "gatsby-image": "^2.4.14",
+        "gatsby-plugin-react-svg": "^3.0.0",
         "gatsby-plugin-sharp": "^2.6.23",
         "gatsby-plugin-styled-components": "^3.3.10",
         "gatsby-source-filesystem": "^2.3.23",
@@ -26,5 +27,8 @@
     },
     "bugs": {
         "url": "https://github.com/gatsbyjs/gatsby/issues"
+    },
+    "devDependencies": {
+        "gatsby-plugin-root-import": "^2.0.5"
     }
 }
