--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "babel-plugin-styled-components": "^1.11.0",
         "gatsby": "^2.23.12",
         "gatsby-image": "^2.4.14",
+        "gatsby-plugin-react-helmet": "^3.3.11",
         "gatsby-plugin-react-leaflet": "^2.0.13",
         "gatsby-plugin-react-svg": "^3.0.0",
         "gatsby-plugin-sharp": "^2.6.23",
@@ -25,6 +26,7 @@
         "leaflet": "^1.6.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-helmet": "^6.1.0",
         "react-leaflet": "^2.7.0",
         "styled-components": "^5.1.1"
     },
