--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "^16.12.0",
         "react-helmet": "^6.1.0",
         "react-leaflet": "^2.7.0",
+        "react-spring": "^8.0.27",
         "styled-components": "^5.1.1"
     },
     "bugs": {
